--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,28 @@
 ./dist  
 /.env
 /.DS_Store
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Editor / IDE
+.vscode/
+.idea/
+
+# Build / cache
+coverage/
+.cache/
+tmp/
+*.log
+
+# OS files
+Thumbs.db
+ehthumbs.db
